<resources>
    <string name="app_name">Pick Your Recipe</string>
    <string name="recipeTitle">Recipe Title</string>
    <string name="recipeDescription">Recipe Description</string>
    <string name="recipeRate">5.0</string>
    <string name="imgDescription">Recipe Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentList">Recipes List</string>

    <string name="welcome">Welcome! Which Recipe will you pick today?</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorites">Favorites</string>
    <string name="pantry">Pantry</string>
    <string name="groceryStores">Find Grocery Stores</string>
    <string name="pickYourRecipe">Pick Your Recipe</string>
    <string name="loggedAs"><![CDATA[Logged as: <username>]]></string>
    <string name="pickYourRecipeSplash">Pick Your Recipe!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notRegistered"><u>Not Registered? Click here to sign up!</u></string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="signUp">Sign Up!</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyRegistered"><u>Already Registered? Click here to Sign In!</u></string>
    <string name="logout">Log Out</string>
    <string name="testButtonGustavo">Botao Gustavo usa para Teste</string>
    <string name="btnBackDetail">Back To the List</string>
    <string name="title_activity_stores">Map</string>
    <string name="getLocation">Get Location</string>
    <string name="goToMyLocation">Go To My Location</string>
    <string name="leaveAComment">Leave a Comment...</string>
    <string name="submit">Submit</string>
    <string name="recipe">Recipe</string>

    <string name="offlineMode">Offline Mode</string>
    <string name="recipeDetails">Recipe Details</string>


    <string-array name="ingredients">
        <item>all-purpose flour</item>
        <item>baking soda</item>
        <item>baking powder</item>
        <item>banana</item>
        <item>basil</item>
        <item>black pepper</item>
        <item>brown sugar</item>
        <item>butter</item>
        <item>cheese</item>
        <item>chicken breast</item>
        <item>cinnamon</item>
        <item>cream cheese</item>
        <item>egg</item>
        <item>flax seeds</item>
        <item>garlic</item>
        <item>garlic powder</item>
        <item>gluten-free all-purpose flour</item>
        <item>heavy cream</item>
        <item>lemon</item>
        <item>macaroni</item>
        <item>milk</item>
        <item>oats</item>
        <item>oil</item>
        <item>onion</item>
        <item>panko</item>
        <item>parmesan</item>
        <item>parsley</item>
        <item>peanut butter</item>
        <item>pepper</item>
        <item>potato</item>
        <item>rice milk</item>
        <item>salmon</item>
        <item>salt</item>
        <item>strawberry</item>
        <item>strawberry yogurt</item>
        <item>sugar</item>
        <item>vanilla extract</item>
        <item>vegetable broth</item>
        <item>water</item>
        <item>white pepper</item>
    </string-array>

    <string-array name="ratingScores">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

</resources>