<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/star_menu"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_pantry"
            android:icon="@drawable/pantry"
            android:title="@string/pantry" />

        <item
            android:id="@+id/nav_grocery_stores"
            android:icon="@drawable/grocery_store"
            android:title="@string/groceryStores" />
    </group>
</menu>