<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pickrecipe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.pickrecipe.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_pantry"
        android:name="com.example.pickrecipe.ui.pantry.PantryFragment"
        android:label="@string/pantry"
        tools:layout="@layout/fragment_pantry" />
    <activity
        android:id="@+id/nav_grocery_stores"
        android:name="com.example.pickrecipe.StoresActivity"
        android:label="activity_stores"
        tools:layout="@layout/activity_stores" />
    <fragment
        android:id="@+id/DetailsFragmentRecipe"
        android:name="com.example.pickrecipe.ui.details.DetailsFragmentRecipe"
        android:label="@string/recipeDetails"
        tools:layout="@layout/fragment_details_recipe" />
</navigation>